@@ -321,3 +321,5 @@
   both as m_module.so and commands.so :) - long live dynamiclinking
 - Fixed bug with double module unloading, bug found by RaYmAn
 - Win32 Changes
+- Had to convert the connect messages back to strlen() because of a bug found by Bagge
+  working on a way to make it better though
